Fix. tag save